error.txt
ain.c:16:1: error: expected initializer before ‘enum’
   16 | enum matrix_score
      | ^~~~
main.c:20:3: error: ‘how_to_caculate’ does not name a type
   20 | } how_to_caculate;
      |   ^~~~~~~~~~~~~~~
main.c: In function ‘int main(int, char**)’:
main.c:74:29: error: ‘how_to_caculate’ was not declared in this scope
   74 |         int int_enum = (int)how_to_caculate;
      |                             ^~~~~~~~~~~~~~~
main.c:76:32: error: ‘THERE_IS_MATRIX_SCORE’ was not declared in this scope
   76 |         if (how_to_caculate == THERE_IS_MATRIX_SCORE)
      |                                ^~~~~~~~~~~~~~~~~~~~~
main.c:147:9: error: ‘how_to_caculate’ was not declared in this scope
  147 |         how_to_caculate = (enum matrix_score)enumGet;
      |         ^~~~~~~~~~~~~~~
main.c:147:33: error: use of enum ‘matrix_score’ without previous declaration
  147 |         how_to_caculate = (enum matrix_score)enumGet;
      |                                 ^~~~~~~~~~~~
main.c:148:32: error: ‘THERE_IS_MATRIX_SCORE’ was not declared in this scope
  148 |         if (how_to_caculate == THERE_IS_MATRIX_SCORE)
      |                                ^~~~~~~~~~~~~~~~~~~~~
main.c:193:48: error: ‘NO_MATRIX_SCORE’ was not declared in this scope
  193 |                         if (how_to_caculate == NO_MATRIX_SCORE)
      |                                                ^~~~~~~~~~~~~~~
main.c: In function ‘void init(int, char**)’:
main.c:241:5: error: ‘how_to_caculate’ was not declared in this scope
  241 |     how_to_caculate = NO_MATRIX_SCORE;
      |     ^~~~~~~~~~~~~~~
main.c:241:23: error: ‘NO_MATRIX_SCORE’ was not declared in this scope
  241 |     how_to_caculate = NO_MATRIX_SCORE;
      |                       ^~~~~~~~~~~~~~~
main.c:244:27: error: ‘THERE_IS_MATRIX_SCORE’ was not declared in this scope
  244 |         how_to_caculate = THERE_IS_MATRIX_SCORE;